<resources>
    <string name="app_name">JairaSolis-Block3-Quiz</string>
    <string name="go_to_main_website">Go to main website</string>
    <string name="administration">Administration</string>
    <string name="academic">Academic</string>
    <string name="student">Student</string>
    <string name="apply">Apply!</string>
    <string name="academic_information_management_system">Academic Information Management System</string>
</resources>